minor css fix (overflow)

--- a/client/main.css
+++ b/client/main.css
@@ -36,7 +36,7 @@ h6 {
 
 /* Center Boxes -- All HTML Files */
 .initial {
-  margin-top:24.5%;
+  margin-top:21%;
   max-width:600px;
 }
 .main-center, .main-center-admin, .initial {
